--- a/pumps.html
+++ b/pumps.html
@@ -1004,6 +1004,34 @@
                     <p class="product-description">Comprehensive range for both residential and commercial pool applications. Designed for energy-efficient operation, optimized filtration quality, and low noise levels. <span class="read-more-text">>> Read More</span></p>
                 </div>
             </div>
+
+            <!-- Diesel Pumps -->
+            <div class="product-card" data-aos="fade-up" data-product="diesel-pump">
+                <div class="product-image">
+                    <img src="images/diesel-pump.jpg" alt="Diesel Pumps">
+                    <div class="product-overlay">
+                        <span class="read-more">Read More</span>
+                    </div>
+                </div>
+                <div class="product-content">
+                    <h3 class="product-title">Diesel Pumps</h3>
+                    <p class="product-description">Heavy-duty diesel-powered pumps designed for industrial applications requiring high flow rates and solid handling capabilities. Ideal for construction, mining, and emergency water supply applications. <span class="read-more-text">>> Read More</span></p>
+                </div>
+            </div>
+
+            <!-- Metering & Dosing Pumps -->
+            <div class="product-card" data-aos="fade-up" data-product="metering-dosing">
+                <div class="product-image">
+                    <img src="images/metering.jpg" alt="Metering & Dosing Pumps">
+                    <div class="product-overlay">
+                        <span class="read-more">Read More</span>
+                    </div>
+                </div>
+                <div class="product-content">
+                    <h3 class="product-title">Metering & Dosing Pumps</h3>
+                    <p class="product-description">Precision metering and dosing pumps designed for accurate chemical injection and fluid dosing applications across various industries including water treatment, food processing, and chemical manufacturing. <span class="read-more-text">>> Read More</span></p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -1062,6 +1090,7 @@
 								<li><a href="about.html">About us</a></li>
 								<li><a href="Products.html">Products</a></li>
 								<li><a href="contact.html">Contact us</a></li>
+								<li><a href="about.html#quality-policy">Quality Policy</a></li>
                             </ul>
                         </div>
 						<!-- Add Contact Information Section -->
@@ -1465,6 +1494,227 @@
                             <div class="feature-item">
                                 <i class="fas fa-leaf"></i>
                                 <span>Energy-saving solutions</span>
+                            </div>
+                        </div>
+                    `
+                },
+                'diesel-pump': {
+                    title: 'Diesel Pumps',
+                    content: `
+                        <p class="lead">Heavy-duty diesel-powered pumps designed for industrial applications requiring high flow rates and solid handling capabilities. These pumps are ideal for construction sites, mining operations, emergency water supply, and dewatering applications where reliable, self-contained power is essential.</p>
+                        <p class="mb-3"><strong>Technical Specifications:</strong></p>
+                        <div class="features-grid">
+                            <div class="feature-item">
+                                <i class="fas fa-plug"></i>
+                                <span>Suction Connection: 150 mm / 6 inch</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-arrow-right"></i>
+                                <span>Delivery Connection: 150 mm / 6 inch</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-cog"></i>
+                                <span>Solid Handling: 75 mm / 3 inch</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-arrow-up"></i>
+                                <span>Max. Head: 48 mtr</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-tachometer-alt"></i>
+                                <span>Max. Flow: 500 m³/hr</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-cogs"></i>
+                                <span>Engine Bell Housing: SAE3 / SAE1</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-circle"></i>
+                                <span>Engine Fly Wheel: 10 inch / 14 inch</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-ruler"></i>
+                                <span>Shaft Diameter: 70 mm</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-compress-alt"></i>
+                                <span>Max. Impeller Diameter: 356 mm</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-wind"></i>
+                                <span>Priming: 60 CFM / 800 RPM</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-chart-line"></i>
+                                <span>Best Efficiency Point: 34 mtr / 375 m³/hr</span>
+                            </div>
+                        </div>
+                        <p class="mb-3 mt-4"><strong>Material Specifications:</strong></p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h6 class="text-primary">Component Materials</h6>
+                                <ul class="list-unstyled">
+                                    <li><strong>Impeller:</strong> SS 316L</li>
+                                    <li><strong>Front Wear Plate:</strong> SS 316L</li>
+                                    <li><strong>Tee Piece:</strong> SG 500/7</li>
+                                    <li><strong>Rear Back Plate:</strong> SG 500/7</li>
+                                    <li><strong>Air & Water Separator:</strong> SG 500/7</li>
+                                    <li><strong>Pump Casing (Volute):</strong> SG Iron 500/7</li>
+                                    <li><strong>Back Plate:</strong> SG 500/7</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h6 class="text-primary">Additional Components</h6>
+                                <ul class="list-unstyled">
+                                    <li><strong>Pump Shaft:</strong> SS 431 / Duplex</li>
+                                    <li><strong>Mechanical Seal:</strong> SIC - Viton</li>
+                                    <li><strong>Bearing Housing:</strong> FG260</li>
+                                    <li><strong>Bell Housing to Engine:</strong> FG260</li>
+                                    <li><strong>Bell Housing to Volute:</strong> FG 260</li>
+                                    <li><strong>Coupling:</strong> SAE 1,2,3</li>
+                                    <li><strong>Non Return Valve:</strong> Cast Iron</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <p class="mb-3 mt-4"><strong>Key Applications:</strong></p>
+                        <div class="features-grid">
+                            <div class="feature-item">
+                                <i class="fas fa-hammer"></i>
+                                <span>Construction site dewatering</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-mountain"></i>
+                                <span>Mining operations</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-exclamation-triangle"></i>
+                                <span>Emergency water supply</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-tint"></i>
+                                <span>Flood control and drainage</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-industry"></i>
+                                <span>Industrial water transfer</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-truck"></i>
+                                <span>Mobile pumping applications</span>
+                            </div>
+                        </div>
+                    `
+                },
+                'metering-dosing': {
+                    title: 'Metering & Dosing Pumps',
+                    content: `
+                        <p class="lead">Precision metering and dosing pumps designed for accurate chemical injection and fluid dosing applications across various industries. These pumps ensure precise control of chemical dosing rates, making them essential for water treatment, food processing, chemical manufacturing, and other critical applications requiring exact fluid measurements.</p>
+                        <p class="mb-3"><strong>Key Applications:</strong></p>
+                        <div class="features-grid">
+                            <div class="feature-item">
+                                <i class="fas fa-tint"></i>
+                                <span>Treatment of drinking and swimming pool water</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-recycle"></i>
+                                <span>Wastewater Treatment in Municipal Water Systems</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-oil-can"></i>
+                                <span>Oil-Water Separation in the Oil and Gas Industry</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-utensils"></i>
+                                <span>Feeding Kieselguhr and Other Media in Beverage and Food Processing</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-car-wash"></i>
+                                <span>Dosing of detergents in car wash installations</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-fire"></i>
+                                <span>Boiler Feedwater Conditioning</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-fish"></i>
+                                <span>Circulation of Salt Water in Marine Aquaria</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-shield-alt"></i>
+                                <span>Corrosion Inhibition in Warm Water Heating Systems</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-industry"></i>
+                                <span>Dosing in Heating Plants with Heavy Oil Boilers</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-tree"></i>
+                                <span>Incorporation of Chemical Additives in the Pulp Industry</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-flask"></i>
+                                <span>Treatment of Chemical wastewater</span>
+                            </div>
+                        </div>
+                        <p class="mb-3 mt-4"><strong>Technical Specifications:</strong></p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h6 class="text-primary">Flow Rates</h6>
+                                <ul class="list-unstyled">
+                                    <li><strong>Kardos KN Series:</strong> 9.9 to 1,550 L/h</li>
+                                    <li><strong>Kardos N Series:</strong> 15 to 4,400 L/h</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h6 class="text-primary">Maximum Pressure</h6>
+                                <ul class="list-unstyled">
+                                    <li><strong>Plastic Construction:</strong> Up to 10 Bar</li>
+                                    <li><strong>Stainless Steel:</strong> Up to 400 Bar</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <p class="mb-3 mt-4"><strong>Materials of Construction:</strong></p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h6 class="text-primary">Pump Components</h6>
+                                <ul class="list-unstyled">
+                                    <li><strong>Metering Head:</strong> Plastic or Stainless Steel</li>
+                                    <li><strong>Piston:</strong> Ceramic, Stainless Steel, or Hastelloy</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h6 class="text-primary">Sealing Components</h6>
+                                <ul class="list-unstyled">
+                                    <li><strong>Piston Packings:</strong> PTFE or Aramid-Kevlar</li>
+                                    <li><strong>Seals:</strong> High-grade chemical resistant materials</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <p class="mb-3 mt-4"><strong>Key Features:</strong></p>
+                        <div class="features-grid">
+                            <div class="feature-item">
+                                <i class="fas fa-bullseye"></i>
+                                <span>Precise flow control and dosing accuracy</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-cog"></i>
+                                <span>Adjustable stroke length and frequency</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-shield-alt"></i>
+                                <span>Corrosion-resistant construction materials</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-tools"></i>
+                                <span>Easy maintenance and calibration</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-chart-line"></i>
+                                <span>Consistent and repeatable dosing performance</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-volume-up"></i>
+                                <span>Wide range of flow rates and pressures</span>
                             </div>
                         </div>
                     `
