--- a/contact.html
+++ b/contact.html
@@ -641,6 +641,7 @@
               <li><a class="dropdown-item" href="instruments.html">Instruments & Lab Apparatus</a></li>
               <li><a class="dropdown-item" href="disinfectants.html">Disinfection Products</a></li>
               <li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
+              <li><a class="dropdown-item" href="festo-products.html">Festo Products</a></li>
                                           <li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
             </ul>
           </li>
