products page change

--- a/Products.html
+++ b/Products.html
@@ -988,19 +988,6 @@
     </nav>
     <!-- End Header/Navigation -->
 
-    <!-- Hero Section -->
-    <section class="hero-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto text-center hero-content">
-                    <h1 class="hero-title" data-aos="fade-up">Complete Water Treatment Solutions</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Comprehensive Range of Products for Industrial & Commercial Applications</p>
-                    <p class="lead" data-aos="fade-up" data-aos-delay="400">From RO systems to chemicals, pumps to instruments - Genoasis provides everything you need for efficient water treatment and purification across all industries.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Products Grid Section -->
     <section class="products-section py-5">
         <div class="container">
@@ -1013,7 +1000,7 @@
             
             <div class="row g-4">
                 <!-- RO Pressure Vessels & FRP Filters -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <a href="frpmedia.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1031,7 +1018,7 @@
                 </div>
 
                 <!-- Membrane Products -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <a href="membranes.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1049,7 +1036,7 @@
                 </div>
 
                 <!-- Pumps -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <a href="pumps.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1067,7 +1054,7 @@
                 </div>
 
                 <!-- Filter Cartridges & Housings -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="400">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="400">
                     <a href="filters.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1085,7 +1072,7 @@
                 </div>
 
                 <!-- Sand Media & Ion Exchange Resins -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="500">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="500">
                     <a href="sandmedia.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1103,7 +1090,7 @@
                 </div>
 
                 <!-- Water Treatment Chemicals -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="600">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="600">
                     <a href="chemicals.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1121,7 +1108,7 @@
                 </div>
 
                 <!-- Waste Water Equipments -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="700">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="700">
                     <a href="Wastewater.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1139,7 +1126,7 @@
                 </div>
 
                 <!-- Instruments & Lab Apparatus -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="800">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="800">
                     <a href="instruments.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1157,7 +1144,7 @@
                 </div>
 
                 <!-- Disinfection Products -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="900">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="900">
                     <a href="disinfectants.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1175,7 +1162,7 @@
                 </div>
 
                 <!-- Valves, Couplings & Fittings -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1000">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1000">
                     <a href="valves.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1192,8 +1179,26 @@
                     </a>
                 </div>
 
+                <!-- Festo Products -->
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1050">
+                    <a href="festo-products.html" class="text-decoration-none">
+                        <div class="product-card">
+                            <div class="product-image">
+                                <img src="images/festo/FestoVUVSSolenoidValve.jpg" alt="Festo Products">
+                                <div class="product-overlay">
+                                    <i class="fas fa-arrow-right"></i>
+                                </div>
+                            </div>
+                            <div class="product-content">
+                                <h4 class="product-title">Festo Products</h4>
+                                <p class="product-description">Complete range of pneumatic components, cylinders, valves, and fittings</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <!-- Atmospheric Water Generators -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1100">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1100">
                     <a href="atmospheric-water-generators.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
@@ -1211,7 +1216,7 @@
                 </div>
 
                 <!-- Nanobubble Technology -->
-                <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1200">
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1200">
                     <a href="nanobubble-technology.html" class="text-decoration-none">
                         <div class="product-card">
                             <div class="product-image">
