--- a/festo-products.html
+++ b/festo-products.html
@@ -562,6 +562,12 @@
                         <a href="tel:+918925883227" class="me-3 text-decoration-none">
                             <i class="fas fa-phone"></i> +91 892 588 3227
                         </a>
+                        <a href="tel:+971503571340" class="me-3 text-decoration-none">
+                            <i class="fas fa-phone"></i> +971 50 357 1340
+                        </a>
+                        <a href="tel:+971504973835" class="me-3 text-decoration-none">
+                            <i class="fas fa-phone"></i> +971 50 497 3835
+                        </a>
                         <a href="mailto:info@genoasis.com" class="text-decoration-none">
                             <i class="fas fa-envelope"></i> info@genoasis.com
                         </a>
@@ -782,6 +788,8 @@
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt me-2"></i>6, Balaji St, Guduvancherry<br>Chennai, Tamil Nadu, India</li>
                                 <li><i class="fas fa-phone me-2"></i>+91 892 588 3227</li>
+                                <li><i class="fas fa-phone me-2"></i>+971 50 357 1340</li>
+                                <li><i class="fas fa-phone me-2"></i>+971 50 497 3835</li>
                                 <li><i class="fas fa-envelope me-2"></i>info@genoasis.com</li>
                             </ul>
                         </div>
