--- a/valves.html
+++ b/valves.html
@@ -571,6 +571,12 @@
 						<a href="tel:+918925883227" class="me-3 text-decoration-none">
 							<i class="fas fa-phone"></i> +91 892 588 3227
 						</a>
+						<a href="tel:+971503571340" class="me-3 text-decoration-none">
+							<i class="fas fa-phone"></i> +971 50 357 1340
+						</a>
+						<a href="tel:+971504973835" class="me-3 text-decoration-none">
+							<i class="fas fa-phone"></i> +971 50 497 3835
+						</a>
 						<a href="mailto:info@genoasis.com" class="text-decoration-none">
 							<i class="fas fa-envelope"></i> info@genoasis.com
 						</a>
@@ -766,6 +772,8 @@
 							<ul class="list-unstyled">
 								<li><i class="fas fa-map-marker-alt me-2"></i>6, Balaji St, Guduvancherry<br>Chennai, Tamil Nadu, India</li>
 								<li><i class="fas fa-phone me-2"></i>+91 892 588 3227</li>
+								<li><i class="fas fa-phone me-2"></i>+971 50 357 1340</li>
+								<li><i class="fas fa-phone me-2"></i>+971 50 497 3835</li>
 								<li><a href="mailto:info@genoasis.com"><i class="fas fa-envelope me-2"></i>info@genoasis.com</a></li>
 							</ul>
 						</div>
