--- a/contact.html
+++ b/contact.html
@@ -689,6 +689,20 @@
             </div>
             <h3 class="contact-title">Our Location</h3>
             <p class="contact-text">6, Balaji St, Guduvancherry<br>Chennai, Tamil Nadu, India</p>
+            <div class="map-container mt-3" style="border-radius: 10px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1); position: relative;">
+              <div id="map-loading" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 10; background: rgba(255,255,255,0.9); padding: 10px; border-radius: 5px; font-size: 14px; color: #666;">
+                <i class="fas fa-spinner fa-spin me-2"></i>Loading map...
+              </div>
+              <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.123456789!2d80.0571267!3d12.8402947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f74c2d959a3d%3A0xb8ecf212921eb124!2sGenoasis%20Technologies!5e0!3m2!1sen!2sin!4v1234567890123!5m2!1sen!2sin" 
+                width="100%" 
+                height="200" 
+                style="border:0;" 
+                allowfullscreen="" 
+                referrerpolicy="no-referrer-when-downgrade"
+                onload="document.getElementById('map-loading').style.display='none';">
+              </iframe>
+            </div>
           </div>
         </div>
         
