add new products

--- a/Products.html
+++ b/Products.html
@@ -985,6 +985,7 @@
                             <li><a class="dropdown-item" href="festo-products.html">Festo Products</a></li>
                             <li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
                             <li><a class="dropdown-item" href="nanobubble-technology.html">Nanobubble Technology</a></li>
+                            <li><a class="dropdown-item" href="dunnage-air-bags.html">Dunnage Air Bags</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link" href="contact.html">Contact us</a></li>
@@ -1234,6 +1235,24 @@
                             <div class="product-content">
                                 <h4 class="product-title">Nanobubble Technology</h4>
                                 <p class="product-description">Breakthrough nanobubble solutions with 10X greater efficiency</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Dunnage Air Bags -->
+                <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="1300">
+                    <a href="dunnage-air-bags.html" class="text-decoration-none">
+                        <div class="product-card">
+                            <div class="product-image">
+                                <img src="images/dunnage-bag.png" alt="Dunnage Air Bags" onerror="this.src='images/chemicals.jpg'">
+                                <div class="product-overlay">
+                                    <i class="fas fa-arrow-right"></i>
+                                </div>
+                            </div>
+                            <div class="product-content">
+                                <h4 class="product-title">Dunnage Air Bags</h4>
+                                <p class="product-description">High-quality air bags for secure cargo transportation and load stabilization</p>
                             </div>
                         </div>
                     </a>
