--- a/about.html
+++ b/about.html
@@ -1021,6 +1021,7 @@
 								<li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
 								<li><a class="dropdown-item" href="festo-products.html">Festo Products</a></li>
 								<li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
+								<li><a class="dropdown-item" href="dunnage-air-bags.html">Dunnage Air Bags</a></li>
 							</ul>
 						</li>
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
