--- a/catalog.html
+++ b/catalog.html
@@ -698,6 +698,7 @@
                             <li><a class="dropdown-item" href="festo-products.html">Festo Products</a></li>
                             <li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
                             <li><a class="dropdown-item" href="nanobubble-technology.html">Nanobubble Technology</a></li>
+                            <li><a class="dropdown-item" href="dunnage-air-bags.html">Dunnage Air Bags</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link active" href="catalog.html">Catalog</a></li>
