changes to phone numbers

--- a/about.html
+++ b/about.html
@@ -48,13 +48,30 @@
 				color: #23a1dc !important;
 			}
 
-			.top-bar i {
-				font-size: 1rem;
-				margin-right: 6px;
+		.top-bar i {
+			font-size: 1rem;
+			margin-right: 6px;
+		}
+
+		/* Prevent phone numbers from breaking lines */
+		.footer-section li {
+			white-space: nowrap;
+		}
+
+		.top-bar a, .top-bar span {
+			white-space: nowrap;
+		}
+
+		/* Mobile Responsive */
+		@media (max-width: 768px) {
+			/* Allow line breaks on mobile for better readability */
+			.footer-section li {
+				white-space: normal;
 			}
 
-			/* Mobile Responsive */
-			@media (max-width: 768px) {
+			.top-bar a, .top-bar span {
+				white-space: normal;
+			}
 				.top-bar {
 					text-align: center;
 				}
@@ -969,14 +986,11 @@
 				<div class="col-12">
 					<div class="d-flex justify-content-end">
 						<a href="tel:+918925883227" class="me-3 text-decoration-none">
-							<i class="fas fa-phone"></i> +91 892 588 3227
+							🇮🇳 <i class="fas fa-phone"></i> +91 892 588 3227
 						</a>
-						<a href="tel:+971503571340" class="me-3 text-decoration-none">
-							<i class="fas fa-phone"></i> +971 50 357 1340
-						</a>
-						<a href="tel:+971504973835" class="me-3 text-decoration-none">
-							<i class="fas fa-phone"></i> +971 50 497 3835
-						</a>
+						<span class="me-3">
+							🇦🇪 <i class="fas fa-phone"></i> <a href="tel:+971503571340" class="text-decoration-none">+971 50 357 1340</a> / <a href="tel:+971504973835" class="text-decoration-none">+971 50 497 3835</a>
+						</span>
 						<a href="mailto:info@genoasis.com" class="text-decoration-none">
 							<i class="fas fa-envelope"></i> info@genoasis.com
 						</a>
@@ -1443,9 +1457,8 @@
 							<div class="col-6 col-sm-6 col-md-4">
 							<ul class="list-unstyled">
 								<li><i class="fas fa-map-marker-alt me-2"></i>6, Balaji St, Guduvancherry<br>Chennai, Tamil Nadu, India</li>
-								<li><i class="fas fa-phone me-2"></i>+91 892 588 3227</li>
-								<li><i class="fas fa-phone me-2"></i>+971 50 357 1340</li>
-								<li><i class="fas fa-phone me-2"></i>+971 50 497 3835</li>
+								<li>🇮🇳 <i class="fas fa-phone me-2"></i>+91 892 588 3227</li>
+								<li>🇦🇪 <i class="fas fa-phone me-2"></i>+971 50 357 1340 / +971 50 497 3835</li>
 								<li><i class="fas fa-envelope me-2"></i>info@genoasis.com</li>
 							</ul>
 							</div>
