--- a/filters.html
+++ b/filters.html
@@ -215,7 +215,24 @@
             background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(35, 161, 220, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
         }
 
+        /* Prevent phone numbers from breaking lines */
+        .footer-section li {
+            white-space: nowrap;
+        }
+
+        .top-bar a, .top-bar span {
+            white-space: nowrap;
+        }
+
         @media (max-width: 768px) {
+            /* Allow line breaks on mobile for better readability */
+            .footer-section li {
+                white-space: normal;
+            }
+
+            .top-bar a, .top-bar span {
+                white-space: normal;
+            }
             .top-bar {
                 text-align: center;
             }
@@ -842,14 +859,11 @@
 				<div class="col-12">
 					<div class="d-flex justify-content-end">
 						<a href="tel:+918925883227" class="me-3 text-decoration-none">
-							<i class="fas fa-phone"></i> +91 892 588 3227
+							🇮🇳 <i class="fas fa-phone"></i> +91 892 588 3227
 						</a>
-						<a href="tel:+971503571340" class="me-3 text-decoration-none">
-							<i class="fas fa-phone"></i> +971 50 357 1340
-						</a>
-						<a href="tel:+971504973835" class="me-3 text-decoration-none">
-							<i class="fas fa-phone"></i> +971 50 497 3835
-						</a>
+						<span class="me-3">
+							🇦🇪 <i class="fas fa-phone"></i> <a href="tel:+971503571340" class="text-decoration-none">+971 50 357 1340</a> / <a href="tel:+971504973835" class="text-decoration-none">+971 50 497 3835</a>
+						</span>
 						<a href="mailto:info@genoasis.com" class="text-decoration-none">
 							<i class="fas fa-envelope"></i> info@genoasis.com
 						</a>
@@ -1056,9 +1070,8 @@
 						<div class="col-6 col-sm-6 col-md-4">
 							<ul class="list-unstyled">
 								<li><i class="fas fa-map-marker-alt me-2"></i>6, Balaji St, Guduvancherry<br>Chennai, Tamil Nadu, India</li>
-								<li><i class="fas fa-phone me-2"></i>+91 892 588 3227</li>
-								<li><i class="fas fa-phone me-2"></i>+971 50 357 1340</li>
-								<li><i class="fas fa-phone me-2"></i>+971 50 497 3835</li>
+								<li>🇮🇳 <i class="fas fa-phone me-2"></i>+91 892 588 3227</li>
+								<li>🇦🇪 <i class="fas fa-phone me-2"></i>+971 50 357 1340 / +971 50 497 3835</li>
 								<li><i class="fas fa-envelope me-2"></i>info@genoasis.com</li>
 							</ul>
 						</div>
